# mega-str-reverse

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
mega_str_reverse/: __init__.py  core.py
tests/: test_mega_str_reverse.py
